# op-art

./: .pre-commit-config.yaml  README.md  gen_examples.py  op_art.ipynb  requirements.txt  setup.cfg  test_opart.py  utils.py
docs/: index.html  op_art.js
docs/array_object/: T.html  mT.html  setitem.html
docs/creation_functions/: arange.html  asarray.html  empty.html  empty_like.html  eye.html  full.html  full_like.html  linspace.html  meshgrid.html  ones.html  ones_like.html  tril.html  triu.html  zeros.html  zeros_like.html
docs/data_type_functions/: broadcast_arrays.html  broadcast_to.html
docs/elementwise_functions/: add.html  add_broadcast.html  negative.html
docs/indexing/: boolean_array.html  dimensions.html  multi_axis.html  single_axis.html
docs/indexing_functions/: take.html  take_along_axis.html
docs/linear_algebra_functions/: einsum.html  matmul.html  matrix_transpose.html  tensordot.html  transpose.html  vecdot.html
docs/manipulation_functions/: broadcast_arrays.html  concat.html  expand_dims.html  flip.html  moveaxis.html  permute_dims.html  repeat.html  reshape.html  roll.html  squeeze.html  stack.html  tile.html  unstack.html
docs/misc/: reshape_flip_reshape.html
docs/searching_functions/: argmax.html  argmin.html  (+2 more)
op_art/: __init__.py  _array_object.py  _creation_functions.py  _data_type_functions.py  _dtypes.py  _einsum.py  _elementwise_functions.py  _jupyter.py  _linear_algebra_functions.py  _manipulation_functions.py  _searching_functions.py  _set_functions.py  _sorting_functions.py  _statistical_functions.py  _utility_functions.py  _utils.py  _visualization.py
(+31 files in other folders)
