[metadata]
name = op-art
author = Tom White
author_email = tom.e.white@gmail.com
license = MIT
description = Animated array operations
url = https://github.com/tomwhite/op-art
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
install_requires = numpy
