[metadata]
name = op-art
author = Tom White
author_email = tom.e.white@gmail.com
license = MIT
description = Animated array operations
url = https://github.com/tomwhite/op-art
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
packages = op_art
install_requires =
    array_tracker @ git+https://github.com/tomwhite/array-tracker.git
    numpy
setup_requires =
    setuptools >= 41.2
    setuptools_scm

[flake8]
ignore =
    # whitespace before ':' - doesn't work well with black
    E203
    # line too long - let black worry about that
    E501
    # line break before binary operator
    W503
